# cga

./: Makefile.in  README.md  autogen.sh  cga.kdev4  config.h.in  configure  configure.ac
src/: .ca.c.swp  .exrc  Makefile.am  Makefile.in  ca.c  ca.h  cga.c  cga.h  consts.h  main.c  structs.h  utils.c
src/old/: Makefile  Makefile.in  ca.c  ca.h  cga  ga.c  ga.h  main.c  structs.h  utils.c  utils.h
